# gmu-rtx

./: .gitignore  .gitmodules  Makefile  README.md  apt-packages.txt  jetson_deploy.sh  package.xml  requirements.txt  symlinks.sh
.devcontainer/: Dockerfile  detect-usb.sh  devcontainer.json  entrypoint.sh
.github/workflows/: docker-arm64-prequisite-build.yml  docker-image-ci.yml
Arduino/robot_controller/: Motor.cpp  Motor.h  Sensors.cpp  Sensors.h  def.h  pid.cpp  pid.h  remote_rc.cpp  remote_rc.h  robot_controller.cpp  robot_controller.h  ros_node.cpp  ros_node.h  tasks.cpp  tasks.h  util.h
ROS/gps_robot_localization/: CMakeLists.txt  README.md
ROS/gps_robot_localization/config/: ekf_config.yaml  navsat_config.yaml
ROS/gps_robot_localization/launch/: ekf.launch  merged_gps_localization.launch  static_tf.launch
ROS/losi_launch/config/: ekf_filter.yaml  move_base.yaml
ROS/losi_launch/launch/: arduino_bringup.launch  display.launch  ekf_localization_node.launch  losi.launch  navsat_transform_node.launch  (+1 more)
ROS/rtx_navigation/: package.xml
ROS/udev_rules/: 99-arduino.rules  99-gps.rules
XBee/: discovery_code_reciver.py  discovery_code_sender.py  sender_config.py
config/: ekf_config.yaml
cpp/src/: main.cpp
docker/: Dockerfile.amd64  Dockerfile.arm64  apt-arm-realsense.txt  arm64-prerequisite.Dockerfile  build_script.sh
docs/: controlling_robot.md
launch/: ekf.launch
python/: __init__.py  remote_relay.py  utm_converter.py
src/gps_robot_localization/: package.xml
src/losi_launch/: CMakeLists.txt  package.xml
src/udev_rules/: 99-xbee.rules
(+54 files in other folders)
