<package>
  <name>losi_launch</name>
  <version>1.0.0</version>
  <description>Catkin metapackage for sensor suite</description>
  <maintainer email="placeholder@gmu.edu">Robotixx</maintainer>
  <license>placeholder</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>witmotion_ros</run_depend>
  <run_depend>realsense2_camera</run_depend>
  <run_depend>ublox_gps</run_depend>
  <run_depend>rosserial_python</run_depend>

</package>
